<resources>
    <string name="app_name">Scan QRcode and Barcode</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1973973370482992/5294219700</string>
    <!--
       Test: ca-app-pub-3940256099942544/6300978111 -->

    <string name="native_ad_unit_id" translatable="false"></string>

    <string name="menu_qr_Scanner">Scan</string>
    <string name="menu_qr_Generate">Generate</string>
    <string name="menu_qr_History" translatable="false">History</string>

    <string name="fragment_scanner_address" translatable="false">Scan Barcode - QR code</string>
    <string name="scan_fragment_scanned_image">Scan Image</string>
    <string name="fragment_scanner_button">Scan</string>
    <string name="fragment_scanner_search_google">Search</string>
    <string name="fragment_scanner_result">Result</string>
    <string name="fragment_scanner_text_to_scan_img">Scan Image</string>
    <string name="fragment_scanner_button_back">Back</string>
    <string name="fragment_scanner_link_result">Link Found</string>
    <string name="fragment_scanner_text_found">Text Found</string>
    <string name="fragment_scanner_SMS_found">SMS Found</string>
    <string name="fragment_scanner_SMS_CALL">Call</string>
    <string name="fragment_scanner_SMS_phonenumber">Phone Number</string>
    <string name="fragment_scanner_SMS_message">Message</string>

    <string name="fragment_scanner_contact_found">Contact Found</string>

    <string name="fragment_generate_content">Generated Content</string>
    <string name="fragment_generate_button"> Generate</string>
    <string name="fragment_generate_selecter_button">Select Type of Code to Generate</string>
    <string name="type_of_code">Type of Code</string>
    <string name="fragment_generate_selecter_popup">Input Title</string>
    <string name="fragment_generate_selecter_popup_save">Save Code</string>
    <string name="fragment_generate_title_ScanWithQRCode">Generate QR Code</string>
    <string name="fragment_generate_title_ScanWithBarcodeCode">Generate Barcode</string>


    <string name="menu_Top_OwnCode_navigation">My Code</string>
    <string name="menu_Top_History_navigation">History</string>

    <string name="code_scanned">Code Scanned</string>

    <string name="scanned_content">Scanned content : </string>

</resources>