<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scan_Image">
    <LinearLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </LinearLayout>
    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/image_scanned"
            android:src="@drawable/icon_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp">
        <TextView
            android:text="@string/fragment_scanner_text_to_scan_img"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:fontFamily="serif"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="==="
            android:backgroundTint="#2CC6C6"
            android:textSize="100dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2.6"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/scan_for_image"
                    android:text="@string/fragment_scanner_button"
                    android:layout_width="wrap_content"
                    android:backgroundTint="#2CC6C6"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/back_to_main_scan"
                    android:text="@string/fragment_scanner_button_back"
                    android:layout_width="wrap_content"
                    android:backgroundTint="#2CC6C6"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </LinearLayout>
    </LinearLayout>


</LinearLayout>