<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/StatusBarColor"
    >


    <LinearLayout
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/white"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/get_image_generate"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_qr_code_scanner_512"
                android:backgroundTint="#00BCD4" />
            <ImageView
                android:id="@+id/download"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_download_24"
                android:visibility="gone"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.8"
            android:background="@drawable/shape_generate_coner"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/selector_generate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#03A7BC"
                    android:textSize="13dp"
                    android:layout_marginRight="5dp"
                    android:drawableRight="@drawable/icon_selector"
                    android:text="@string/type_of_code" />

                <Button
                    android:id="@+id/generate_start_generate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00BCD4"
                    android:layout_marginLeft="5dp"
                    android:text="@string/fragment_generate_button"
                    android:textColor="@color/white"
                    android:textSize="13dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/gemerate_value_entered"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:scrollbars="vertical"
                android:gravity="top"
                android:background="@drawable/shape_corner"
                android:hint="@string/fragment_generate_content"
                android:textSize="15dp"
                android:windowSoftInputMode="adjustPan" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:background="#2CC6C6"/>
    </LinearLayout>



</RelativeLayout>