<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/StatusBarColor"
    >

    <com.google.android.gms.ads.nativead.NativeAdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:background="@color/white"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.5"
                    android:background="@color/white">

                    <EditText
                        android:id="@+id/gemerate_value_entered"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_corner"
                        android:hint="@string/fragment_generate_content"
                        android:textSize="20dp"
                        android:windowSoftInputMode="adjustPan" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5"
            android:background="@drawable/shape_generate_coner"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:gravity="center">

                <Button
                    android:id="@+id/selector_generate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#03A7BC"
                    android:drawableRight="@drawable/icon_selector"
                    android:text="@string/fragment_generate_selecter_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:gravity="center">

                <Button
                    android:id="@+id/generate_start_generate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/fragment_generate_button"
                    android:textColor="@color/white"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.4"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <ImageView
                        android:id="@+id/get_image_generate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#00BCD4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_download_24"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:background="#2CC6C6">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:weightSum="2"
            android:gravity="center|bottom"
            android:background="#2CC6C6">
            <LinearLayout
                android:id="@+id/backgroundShowAdGenerateFragment"
                android:layout_weight="1.7"
                android:gravity="center|bottom"
                android:background="#21A1A1"
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView_generate_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:background="#2CC6C6">

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>